(subdir
 lwt_ppx_to_let_syntax
 (cram
  (package lwt_ppx_to_let_syntax)
  (deps %{bin:lwt-ppx-to-let-syntax})))

(subdir
 lwt_to_direct_style
 (cram
  (package lwt_to_direct_style)
  (deps
   %{bin:lwt-to-direct-style}
   %{bin:ocaml-index}
   (package lwt))))

(subdir
 lwt_log_to_logs
 (cram
  (package lwt_log_to_logs)
  (deps
   %{bin:lwt-log-to-logs}
   %{bin:ocaml-index}
   (package lwt_log)
   (package js_of_ocaml-lwt))))

(subdir
 lwt_lint
 (cram
  (package lwt_lint)
  (deps %{bin:lwt-lint})))
