(subdir
 lwt_ppx_to_let_syntax
 (cram
  (package lwt_ppx_to_let_syntax)
  (deps %{bin:lwt-ppx-to-let-syntax})))

(subdir
 ciao_lwt
 (cram
  (package ciao_lwt)
  (deps
   %{bin:ciao-lwt}
   %{bin:ocaml-index}
   (package lwt))))

(subdir
 lwt_lint
 (cram
  (package lwt_lint)
  (deps %{bin:lwt-lint})))
